<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">



    <modules>
        <module>Common</module>
        <module>Logistic</module>
        <module>Scheduler</module>
        <module>Delivery</module>
    </modules>

    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.unice.polytech.isa</groupId>
    <artifactId>Livrair</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>ISA :: Livrair :: J2E Backend</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <versions.javaee>7.0-1</versions.javaee>
        <versions.maven.compiler>3.7.0</versions.maven.compiler>
        <versions.java>1.8</versions.java>
        <versions.maven.surefire>2.22.0</versions.maven.surefire>
        <junit-platform.version>5.3.1</junit-platform.version>
        <versions.openejb>7.0.2</versions.openejb>
        <versions.tomee>7.0.2</versions.tomee>
        <versions.openjpa>2.4.1</versions.openjpa>
    </properties>

    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>libs-release</name>
            <url>http://23.97.255.1:8081/artifactory/libs-release</url>
        </repository>
        <repository>
            <snapshots/>
            <id>snapshots</id>
            <name>libs-snapshot</name>
            <url>http://23.97.255.1:8081/artifactory/libs-snapshot</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>libs-release</name>
            <url>http://23.97.255.1:8081/artifactory/libs-release</url>
        </pluginRepository>
        <pluginRepository>
            <snapshots/>
            <id>snapshots</id>
            <name>libs-snapshot</name>
            <url>http://23.97.255.1:8081/artifactory/libs-snapshot</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <finalName>livrair</finalName>
        <defaultGoal>package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.21.0</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>1.2.0-M1</version>
                    </dependency>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.2.0</version>
                    </dependency>
                </dependencies>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>${versions.maven.surefire}</version>-->
<!--                <configuration>-->
<!--                    <forkMode>always</forkMode>-->
<!--                    &lt;!&ndash; otherwise openejb embedded and tomee embedded shares the same context and EJBContainer is broken &ndash;&gt;-->
<!--                    <reuseForks>false</reuseForks>-->

<!--                </configuration>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${versions.maven.compiler}</version>
                <configuration>
                    <source>${versions.java}</source>
                    <target>${versions.java}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.tomee.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>${versions.tomee}</version>
                <configuration>
                    <!-- From TomEE to TomEE+ to support the web services stack -->
                    <tomeeClassifier>plus</tomeeClassifier>
                    <args>-Xmx512m -XX:PermSize=256m</args>
                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
                </configuration>
            </plugin>

        </plugins>
    </build>


    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.5</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20190722</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${versions.javaee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-core</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependency to integrate REST clients (order matters for CXF) (provided) -->
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf-rs</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>snapshots</id>
            <name>99c982f4432c-snapshots</name>
            <url>http://23.97.255.1:8081/artifactory/libs-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>

</project>
